# toy-marimo

./: .dockerignore  Dockerfile  Dockerfile.wasm-server  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  vulnerability.yml
html_wasm/: Dockerfile  Makefile
mnt/notebooks/: duckdb.py  duckdb_sql.py  editable_dataframe.py  interactive_pandas_and_altair.py  pandas_and_altair.py  pandas_df_interactive_query.py  polars_dataframe_editor.py
