[project]
name = "toy-marimo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.13.15,<1.0",
    "pandas[pyarrow]>=2.3.0,<=3.0",
    "plotly>=6.1.2,<7.0",
    "vega-datasets>=0.9.0,<=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13,<1.0",
]

[tool.ruff]
exclude = [".venv"]
line-length = 120
indent-width = 4
lint.select = ["E", "W", "F", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
