[project]
name = "toy-marimo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0,<6.0",
    "marimo>=0.13.15,<1.0",
    "pandas[pyarrow]>=2.3.0,<3.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13,<1.0",
]
sql = [
    "duckdb>=1.3.0,<2.0",
    "sqlglot>=26.28.0,<27.0",
]

[tool.ruff]
exclude = [".venv"]
line-length = 120
indent-width = 4
lint.select = ["E", "W", "F", "Q"]
lint.ignore = ["F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"mnt/notebooks/*.py" = ["F821"]
